# topsport-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.learnings/: LEARNINGS.md
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  file-tools.md  index.md  logging-guidelines.md  quality-guidelines.md  spawn-agent.md  streaming.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/04-16-multi-agent-plan/: prd.md  task.json
.trellis/workspace/: index.md
.trellis/workspace/niko/: index.md  journal-1.md
docs/specs/: 2026-04-16-claude-plugin-ecosystem-design.md  2026-04-17-enterprise-readiness-review.md
docs/superpowers/plans/: 2026-04-16-browser-control.md  (+4 more)
examples/: 01_minimal_tool.py  02_default_agent.py  03_event_subscriber.py  04_mcp_tool_source.py  05_cancel.py  06_streaming.py  07_context_provider.py  README.md  smoke_test.py
scripts/: p0_smoke.py  sandbox_agent_e2e.py  sandbox_bench.py
src/topsport_agent/: __init__.py
tests/: test_agent.py  test_agent_config_parts.py  test_agent_multimodal.py  test_anthropic_adapter.py  test_browser.py  test_capability_topo_sort.py  test_checkpoint.py  test_compaction.py  test_database_backends_postgres.py  test_database_config.py  test_database_errors.py  test_database_factory.py  test_database_gateway.py  test_database_null_backend.py  test_database_placeholder_backends.py  test_database_scaffold.py  test_engine_concurrency.py  test_engine_hooks.py  test_engine_loop.py  test_event_payloads.py  test_event_subscribers.py  test_file_ops.py  test_image_generation.py  test_integration_browser.py  test_langfuse_tracer.py  test_llm_clients.py  test_llm_providers.py  test_llm_response.py  test_mcp.py  test_mcp_brave_search.py  test_mcp_cache_ttl.py  test_mcp_elicitation.py  test_mcp_integration_e2e.py  test_mcp_listener.py  test_mcp_logging.py  test_mcp_progress.py  test_mcp_roots.py  test_mcp_sampling.py  test_memory.py  test_message_multimodal.py  (+57 more)
(+160 files in other folders)
