[project]
name = "topsport-agent"
version = "0.0.1"
description = "Agent runtime with ReAct loop, multi-provider LLM abstraction, and pluggable tools"
requires-python = ">=3.11"
dependencies = [
    "prompt_toolkit>=3.0.0",
    "pydantic>=2.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/topsport_agent"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
tracing = [
    "langfuse>=3.0.0",
]
metrics = [
    "prometheus-client>=0.20.0",
]
mcp = [
    "mcp>=1.12.0",
    "httpx>=0.27.0",
]
llm = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]
browser = [
    "playwright>=1.40.0",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
]
sandbox = [
    "opensandbox>=0.1.7",
    "httpx>=0.27.0",
]

[project.scripts]
topsport-agent = "topsport_agent.cli.main:main"
topsport-agent-serve = "topsport_agent.server.main:main"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
